<resources>
    <string name="app_name">paymentCollege</string>
    <string name="admin_button">Admin</string>
    <string name="student_button">Student</string>
    <string name="login_as">Login as</string>
    <string name="login">Login</string>
    <string name="id_label">Enter College ID</string>
    <string name="id_hint">eg : 17361A0504</string>
    <string name="password_label">Enter Password</string>
    <string name="trouble">Trouble logging in?</string>
    <string name="signup">Sign-Up</string>
    <string name="reenter">Re-Enter Password</string>
    <string name="registered">Already Registered?</string>
    <string name="continueText">Continue</string>
    <string name="adminText">Admin</string>
    <string name="adminIDHint">eg : JPN36251</string>
    <string name="getStarted">Get Started</string>
    <string name="name_hint">Enter Name</string>
    <string name="helloText">Hello</string>
    <string name="universityTitle">University/College</string>
    <string name="college_label">Select College</string>
    <string name="name">Name</string>
    <string name="college">University/College</string>
    <string name="college_id">College ID</string>
    <string name="pending_payments">Pending Payments</string>
    <string name="past_payments">Past Payments</string>
    <string name="extras">Extras</string>
    <string name="add_payments">Add Payments</string>
    <string name="current_payments">Current Payments</string>
    <string name="payment_name">Enter Payment Name</string>
    <string name="select_type">Select Payment Type</string>
    <string name="enterCode">Enter Subject Code</string>
    <string name="subjectName">Enter Subject Name</string>
    <string name="add">Add</string>
    <string name="exam_year">Enter Year-Semester</string>
    <string name="exam_hint">eg : 3–2</string>
    <string name="addedSubTitle">Added Subjects</string>
    <string name="amountInput">Enter amount to be paid</string>
    <string name="sign_out">Sign Out</string>
    <string name="submit">Submit</string>
</resources>